[tool.poetry]
name = "f3ast"
version = "1.0.2"
description = "FEBID 3D Algorithm for Stream File Generation (F3AST)"
authors = ["Luka Skoric <skoriclk@gmail.com>"]
readme = "README.md"
packages = [{ include = "f3ast" }]
documentation = "https://f3ast.readthedocs.io/en/latest/"
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
trimesh = "^3.22.5"
numpy = "^1.20.2"
matplotlib = "^3.7.2"
hjson = "^3.1.0"
numba = "^0.57.1"
joblib = "^1.3.1"
pyqt6 = "^6.5.2"
scikit-image = "^0.21.0"
scipy = "^1.11.1"
pyglet = "^2.0.9"
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
pytest = { version = "^6.2.5", optional = true }
black = { version = "^23.7.0", optional = true }
isort = { version = "^5.12.0", optional = true }

[tool.poetry.extras]
test = ["pytest"]
lint = ["black", "isort"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
