[tool.poetry]
name = "f3ast"
version = "1.0.2"
description = "FEBID 3D Algorithm for Stream File Generation (F3AST)"
authors = ["Luka Skoric <skoriclk@gmail.com>"]
readme = "README.md"
packages = [{ include = "f3ast" }]
documentation = "https://f3ast.readthedocs.io/en/latest/"
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
trimesh = "^4.11.5"
numpy = "^2.2.6"
matplotlib = "^3.10.8"
hjson = "^3.1.0"
numba = "^0.65.0"
joblib = "^1.5.3"
pyqt6 = "^6.11.0"
scikit-image = "^0.25.2"
scipy = "^1.15.3"
pyglet = "^2.1.14"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"
pytest = { version = "^6.2.5", optional = true }
black = { version = "^26.3.1", optional = true }
isort = { version = "^5.12.0", optional = true }
pillow = ">=12.2.0"
urllib3 = ">=2.6.3"
nbconvert = ">=7.17.1"
jupyterlab = ">=4.2.5"
notebook = ">=7.2.2"
h11 = ">=0.16.0"

[tool.poetry.extras]
test = ["pytest"]
lint = ["black", "isort"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
